Fix table layout overflow that included all contents visual overflows

crrev.com/c/515606 overly simplified table layout overflow which is
expected to cover all collapsed border overflows. The CL added all
visual overflow into layout overflow causing it to also unexpectedly
cover all contents overflows (e.g. shadow and outlines of descendants).

Fix the issue by just include collapsed border overflow.

Bug: 763337
Change-Id: I6c53afba3f00729a483588dfea46c86a8b78562a
Reviewed-on: https://chromium-review.googlesource.com/657815
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@opera.com>
Cr-Commit-Position: refs/heads/master@{#501201}
Former-commit-id: b5eb082d971e76308d9f95167db1bb67222a28e7